[package]
name = "qonvert"
version = "0.2.6"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.25"
tokio = { version = "1.22.0", features = ["full"] }
indicatif = "0.17.2"
clap = { version = "3.2.16", features = ["derive"] }
clean-path = "0.2.1"

[[bin]]
name = "qo"
path = "src/main.rs"
